tests/samples/negative/types/string_bad_unicode_escape.ax
module string_bad_unicode_escape;

const TEXT: str = "\u{D800}";

fn main() -> i32 {
    return 0;
}
